--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ use_spin = ["spin"]
 [dependencies.spin]
 version = "0.10.0"
 optional = true
+default-features = false
+features = ["spin_mutex"]
 
 [dev-dependencies]
 criterion = "0.6.0"
